# mwrpy_ret

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  release-version
.github/workflows/: publish.yml
config_vaisala/: level1.yaml  main.yaml
mwrpy_ret/: __init__.py  atmos.py  cli.py  constants.py  prepare_input.py  process_mwrpy_ret.py  ret_mwr.py  utils.py  version.py
mwrpy_ret/config_vaisala/: level0_mwx.yml  level2.yaml  main.yaml
mwrpy_ret/era5_download/: get_era5.py
mwrpy_ret/rad_trans/: __init__.py  calc_absorption.py  nonScatMWRadTran.py  prepare_input.py  rad_trans_meta.py  rad_trans_mw.py  rad_trans_rk.py  rad_trans_rk22.py  rad_trans_rk23.py  run_rad_trans.py
mwrpy_ret/rad_trans/coeff/: o2_bandpass_interp_freqs.json
mwrpy_ret/rad_trans/coeff/r22/: h2o_list.json  o2_list.json
mwrpy_ret/rad_trans/coeff/r23/: h2o_list.json  o2_list.json
mwrpy_ret/rad_trans/coeff/r24/: o2_list.json
mwrpy_ret/site_config/: config.yaml  juelich.yaml  lindenberg.yaml  standard_atmosphere.yaml
mwrpy_sim/: __init__.py  atmos.py  cli.py  prepare_input.py  process_mwrpy_sim.py  sim_mwr.py  version.py
mwrpy_sim/config_vaisala/: main.yaml
mwrpy_sim/era5_download/: get_era5.py
mwrpy_sim/rad_trans/: calc_absorption.py  rad_trans_meta.py  rad_trans_mw.py  run_rad_trans.py
mwrpy_sim/rad_trans/coeff/: era5_model_levels_137.csv  o2_bandpass_interp_norm_resp.json
mwrpy_sim/rad_trans/coeff/r24/: h2o_list.json
mwrpy_sim/site_config/: config.yaml  lindenberg.yaml
tests/data/: standard_atmospheres.nc
